@@ -122,13 +122,16 @@ values:
 
 LIBSPECTRUM_MACHINE_16		16K Spectrum
 LIBSPECTRUM_MACHINE_48		48K Spectrum
-LIBSPECTRUM_MACHINE_TC2048	Timex TC2048
-LIBSPECTRUM_MACHINE_TC2068	Timex TC2068
 LIBSPECTRUM_MACHINE_128		(Original) 128K Spectrum
 LIBSPECTRUM_MACHINE_PLUS2	Spectrum +2 (the grey one)
-LIBSPECTRUM_MACHINE_PENT	Pentagon 128
 LIBSPECTRUM_MACHINE_PLUS2A	Spectrum +2A (the black one)
 LIBSPECTRUM_MACHINE_PLUS3	Spectrum +3
+LIBSPECTRUM_MACHINE_PLUS3E	Spectrum +3e
+LIBSPECTRUM_MACHINE_TC2048	Timex TC2048
+LIBSPECTRUM_MACHINE_TC2068	Timex TC2068
+LIBSPECTRUM_MACHINE_PENT	Pentagon 128
+LIBSPECTRUM_MACHINE_SCORP	Scorpion ZS 256
+LIBSPECTRUM_MACHINE_SE		Spectrum SE
 
 The `libspectrum_machine_name' function:
 
@@ -153,6 +156,10 @@ LIBSPECTRUM_MACHINE_CAPABILITY_AY
   This machine has an AY-3-8912 sound chip (as in the 128K and later
   machines).
 
+LIBSPECTRUM_MACHINE_CAPABILITY_EVEN_M1
+  Processor M1 cycles on this machine always start on even tstate
+  counts.
+
 LIBSPECTRUM_MACHINE_CAPABILITY_KEMPSTON_JOYSTICK
   This machine has built-in Kempston joystick ports as on the TC2048.
 
@@ -161,6 +168,14 @@ LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_MEMORY
 
 LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_DISK
   This machine has a disk drive similar to that on the +3.
+
+LIBSPECTRUM_MACHINE_CAPABILITY_SCORP_MEMORY
+  This machine has memory paging capabilities like those found on the
+  Scorpion ZS 256.
+
+LIBSPECTRUM_MACHINE_CAPABILITY_SE_MEMORY
+  This machine has memory paging capabilities like those found on the
+  Spectrum SE.
 
 LIBSPECTRUM_MACHINE_CAPABILITY_SINCLAIR_JOYSTICK
   This machine has built-in Sinclair joystick ports as on the +2/+2A/+3.
@@ -201,6 +216,7 @@ the following values:
 LIBSPECTRUM_ID_UNKNOWN		Couldn't identify this file
 
 LIBSPECTRUM_ID_CARTRIDGE_DCK	A .dck Timex dock image
+LIBSPECTRUM_ID_CARTRIDGE_IF2	A .rom Interface II cartridge
 
 LIBSPECTRUM_ID_COMPRESSED_BZ2	A bzip2 compressed file
 LIBSPECTRUM_ID_COMPRESSED_GZ	A gzip compressed file
@@ -208,6 +224,8 @@ LIBSPECTRUM_ID_COMPRESSED_GZ	A gzip compressed file
 LIBSPECTRUM_ID_DISK_DSK		A .dsk +3 disk file
 LIBSPECTRUM_ID_DISK_SCL		A .scl TRDOS disk file
 LIBSPECTRUM_ID_DISK_TRD		A .trd TRDOS disk file
+
+LIBSPECTRUM_ID_HARDDISK_HDF	A .hdf IDE hard disk image
 
 LIBSPECTRUM_ID_RECORDING_RZX	A .rzx input recording
 
@@ -252,8 +270,10 @@ which returns the type of file represented by the `type' parameter in
 LIBSPECTRUM_CLASS_UNKNOWN		An unknown file type
 
 LIBSPECTRUM_CLASS_CARTRIDGE_TIMEX	A Timex dock cartridge
+LIBSPECTRUM_CLASS_CARTRIDGE_IF2		An Interface II cartridge
 LIBSPECTRUM_CLASS_DISK_PLUS3		A +3 disk image
 LIBSPECTRUM_CLASS_DISK_TRDOS		A TRDOS disk image
+LIBSPECTRUM_CLASS_HARDDISK		An IDE hard disk image
 LIBSPECTRUM_CLASS_RECORDING		An input recording
 LIBSPECTRUM_CLASS_SNAPSHOT		A snapshot
 LIBSPECTRUM_CLASS_TAPE			A tape image
@@ -455,6 +475,14 @@ The available properties (along with their types) are:
 * libspectrum_byte out_ay_registerport
 * libspectrum_byte ay_registers[16]
 
+* int beta_paged
+* int beta_direction
+* libspectrum_byte beta_system
+* libspectrum_byte beta_track
+* libspectrum_byte beta_sector
+* libspectrum_byte beta_data
+* libspectrum_byte beta_status
+
 * libspectrum_byte out_scld_hsr
 * libspectrum_byte out_scld_dec
 
@@ -465,14 +493,64 @@ The available properties (along with their types) are:
 * libspectrum_byte* slt_screen
 * int slt_screen_level
 
-Most of those should be fairly self-explanatory; the `a_', `f_',
-`bc_', `de_' and `hl_' functions represent the A', F', BC', DE' and
-HL' registers. For 48K snaps, 0x4000 to 0x7fff is stored in
-`pages[5]', 0x8000 to 0xbfff in `pages[2]' and 0xc000 to 0xffff in
-`pages[0]' (This is equivalent to the default mapping on the 128K
-machines). `last_instruction_ei' being non-zero signals that the
-opcode previously executed was an EI and thus interrupts should not be
-accepted at this point, but will be after the next opcode.
+* int zxatasp_active
+* int zxatasp_upload
+* int zxatasp_writeprotect
+* libspectrum_byte zxatasp_port_a
+* libspectrum_byte zxatasp_port_b
+* libspectrum_byte zxatasp_port_c
+* libspectrum_byte zxatasp_control
+* size_t zxatasp_pages
+* size_t zxatasp_current_page
+* libspectrum_byte* zxatasp_ram[32]
+
+* int zxcf_active
+* int zxcf_upload
+* libspectrum_byte zxcf_memctl
+* size_t zxcf_pages
+* libspectrum_byte* zxcf_ram[64]
+
+* int interface2_active
+* libspectrum_byte* interface2_rom[1]
+
+* int dock_active
+* libspectrum_byte exrom_ram[8]
+* libspectrum_byte* exrom_cart[8]
+* libspectrum_byte dock_ram[8]
+* libspectrum_byte* dock_cart[8]
+
+Most of those should be fairly self-explanatory; those which may not
+be are:
+
+* `a_', `f_', `bc_', `de_' and `hl_' functions represent the A', F',
+  BC', DE' and HL' registers.
+
+* For 48K snaps, 0x4000 to 0x7fff is stored in `pages[5]', 0x8000 to
+  0xbfff in `pages[2]' and 0xc000 to 0xffff in `pages[0]' (This is
+  equivalent to the default mapping on the 128K machines).
+
+* `last_instruction_ei' being non-zero signals that the opcode
+  previously executed was an EI and thus interrupts should not be
+  accepted at this point, but will be after the next opcode.
+
+* `out_plus3_memoryport' should also be used to save the state of
+  the Scorpion's secondary memory control port (0x1ffd).
+
+* The `beta_*' functions represent the Betadisk
+  interface. `beta_paged' is non-zero if the Betadisk ROM is currently
+  paged in between 0x0000 and 0x3fff and `beta_direction' is non-zero
+  if the current seek direction is towards higher cylinders
+  (rimwards). The other `beta_*' functions represent the current
+  values of the Betadisk interface registers.
+
+* The `zxatasp_*' and `zxcf_*' functions give the state of the ZXATASP
+  and ZXCF interfaces. `zxatasp_pages' and `zxcf_pages' give the
+  number of 16K RAM pages attached to the
+  interface. `zxatasp_current_page' gives the page which is currently
+  paged in via the ZXATASP, or 255 if no page is currently selected.
+
+* `exrom_ram' and `dock_ram' are non-zero if the corresponding 8K page
+  of the Timex EXROM or DOCK are writable.
 
 With all those housekeeping routines out of the way, there are two
 main workhorses of the snapshot routines:
@@ -587,6 +665,76 @@ identification process and can be set to NULL (or anything else) if
 bzip2 or gzip will be automatically and transparently decompressed.
 
 libspectrum_error
+libspectrum_tape_write( libspectrum_byte **buffer, size_t *length,
+			libspectrum_tape *tape, libspectrum_id_t type )
+
+Take the snapshot in `tape and serialise it as a `type' format file
+into `*buffer'. On entry, '*buffer' is assumed to be allocated
+'*length' bytes, and will grow if necessary; if '*length' is zero,
+'*buffer' can be uninitialised on entry.
+
+libspectrum_error libspectrum_tape_get_next_edge( libspectrum_dword *tstates,
+						  int *flags,
+						  libspectrum_tape *tape )
+
+This is the main workhorse function of the tape routines and will
+return in `tstates' the number of tstates until the next edge should
+occur from `tape'. `flags' will be set to the bitwise or of the
+following:
+
+LIBSPECTRUM_TAPE_FLAGS_BLOCK	The current block ends with this edge
+LIBSPECTRUM_TAPE_FLAGS_STOP	User code should stop playing the tape
+				after this edge
+LIBSPECTRUM_TAPE_FLAGS_STOP48   User code should stop playing the tape
+				after this edge if it was emulating a
+				48K machine. The desired behaviour for
+				things like the TC2048 is undefined in
+				the .tzx format :-(
+
+int libspectrum_tape_present( libspectrum_tape *tape )
+
+Returns non-zero if `tape' currently contains a tape image and zero
+otherwise.
+
+libspectrum_error libspectrum_tape_position( int *n, libspectrum_tape *tape )
+
+Return in `n' the position of the current block on the tape. The first
+block is block 0, the second block 1, etc.
+
+libspectrum_error libspectrum_tape_nth_block( libspectrum_tape *tape, int n )
+
+Set the current block on the tape to be the `n'th block and initialise
+it. Again, the first block on the tape is block 0.
+
+libspectrum_error
+libspectrum_tape_append_block( libspectrum_tape *tape,
+                               libspectrum_tape_block *block )
+
+Append `block' to `tape'.
+
+libspectrum_tape_block*
+libspectrum_tape_current_block( libspectrum_tape *tape )
+
+Get the currently active block on the tape.
+
+libspectrum_tape_block*
+libspectrum_tape_peek_next_block( libspectrum_tape *tape );
+
+Get the next block on the tape, but don't move the tape along or
+initialise the block.
+
+libspectrum_tape_block*
+libspectrum_tape_select_next_block( libspectrum_tape *tape );
+
+Move the tape along so it points to the next block, initialise that
+block and return it.
+
+Deprecated tape routines
+------------------------
+
+*These functions are deprecated and should not be used in new code*:
+
+libspectrum_error
 libspectrum_tap_read( libspectrum_tape *tape, const libspectrum_byte *buffer,
 	              const size_t length )
 
@@ -624,69 +772,6 @@ libspectrum_warajevo_read( libspectrum_tape *tape,
 
 Just as `libspectrum_tap_read', but for Warajevo-style .tap files.
 There is no currently no function to write a Warajevo-style .tap file.
-
-libspectrum_error libspectrum_tape_get_next_edge( libspectrum_dword *tstates,
-						  int *flags,
-						  libspectrum_tape *tape )
-
-This is the main workhorse function of the tape routines and will
-return in `tstates' the number of tstates until the next edge should
-occur from `tape'. `flags' will be set to the bitwise or of the
-following:
-
-LIBSPECTRUM_TAPE_FLAGS_BLOCK	The current block ends with this edge
-LIBSPECTRUM_TAPE_FLAGS_STOP	User code should stop playing the tape
-				after this edge
-LIBSPECTRUM_TAPE_FLAGS_STOP48   User code should stop playing the tape
-				after this edge if it was emulating a
-				48K machine. The desired behaviour for
-				things like the TC2048 is undefined in
-				the .tzx format :-(
-
-int libspectrum_tape_present( libspectrum_tape *tape )
-
-Returns non-zero if `tape' currently contains a tape image and zero
-otherwise.
-
-libspectrum_error libspectrum_tape_position( int *n, libspectrum_tape *tape )
-
-Return in `n' the position of the current block on the tape. The first
-block is block 0, the second block 1, etc.
-
-libspectrum_error libspectrum_tape_nth_block( libspectrum_tape *tape, int n )
-
-Set the current block on the tape to be the `n'th block and initialise
-it. Again, the first block on the tape is block 0.
-
-libspectrum_error
-libspectrum_tape_block_description( char *buffer, size_t length,
-				    libspectrum_tape_block *block )
-
-Copy into `buffer' (which has been allocated at least `length' bytes by
-the user code) a text description of the type of `block'.
-
-libspectrum_error
-libspectrum_tape_append_block( libspectrum_tape *tape,
-                               libspectrum_tape_block *block )
-
-Append `block' to `tape'.
-
-libspectrum_tape_block*
-libspectrum_tape_current_block( libspectrum_tape *tape )
-
-Get the currently active block on the tape.
-
-libspectrum_tape_block*
-libspectrum_tape_peek_next_block( libspectrum_tape *tape );
-
-Get the next block on the tape, but don't move the tape along or
-initialise the block.
-
-libspectrum_tape_block*
-libspectrum_tape_select_next_block( libspectrum_tape *tape );
-
-Move the tape along so it points to the next block, initialise that
-block and return it.
 
 Tape iterators
 --------------
@@ -777,6 +862,13 @@ libspectrum_error libspectrum_tape_block_init( libspectrum_tape_block *block )
 
 Initialise `block' such that it is ready for playback (with
 `libspectrum_tape_get_next_edge').
+
+libspectrum_error
+libspectrum_tape_block_description( char *buffer, size_t length,
+				    libspectrum_tape_block *block )
+
+Copy into `buffer' (which has been allocated at least `length' bytes by
+the user code) a text description of the type of `block'.
 
 Similar to the snapshot structure, there is a large family of routines
 for setting and retrieving the parameters of individual block types.
@@ -1130,5 +1222,98 @@ libspectrum_dck_read( libspectrum_dck *dck, const libspectrum_byte *buffer,
 Read in a dock structure from the `length' byte long `buffer'. Images
 compressed with bzip2 or gzip will be automatically and transparently
 decompressed.
+
+IDE hard disk images
+====================
+
+Libspectrum contains various routines for handling IDE hard disk
+images. Due to the (potential) large size of these files, hard disk
+images are not handled entirely in memory as are the other file types,
+but require a real file.
+
+libspectrum_error
+libspectrum_ide_alloc( libspectrum_ide_channel **chn,
+		       libspectrum_ide_database databus )
+
+Allocate a new IDE channel in `*chn' of type `databus'. `databus' can
+take the following values:
+
+LIBSPECTRUM_IDE_DATA8
+  A simple 8-bit interface which accesses only the low byte of each
+  word on the hard disk.
+
+LIBSPECTRUM_IDE_DATA16
+  A full 16-bit interface which can access all data on the hard disk.
+
+LIBSPECTRUM_IDE_DATA16_BYTESWAP
+  A full 16-bit interface which accesses the data in byte-swapped
+  order.
+
+LIBSPECTRUM_IDE_DATA16_DATA2
+  A full 16-bit interface which returns the high byte of each word in
+  the secondary data register.
+
+libspectrum_error
+libspectrum_ide_free( libspectrum_ide_channel *chn )
+
+Deallocate the IDE channel in `chn'.
+
+libspectrum_error
+libspectrum_ide_insert( libspectrum_ide_channel *chn,
+			libspectrum_ide_unit unit,
+			const char *filename )
+
+Cause the IDE hard disk image in `filename' to be attached to `unit'
+of the IDE channel `chn'. `unit' can take the following values:
+
+LIBSPECTRUM_IDE_MASTER	  The IDE master unit
+LIBSPECTRUM_IDE_SLAVE	  The IDE slave unit
+
+libspectrum_error
+libspectrum_ide_commit( libspectrum_ide_channel *chn,
+			libspectrum_ide_unit unit )
+
+Cause any changes made to the image attached to `unit' of `chn' to be
+written back to the image.
+
+libspectrum_error
+libspectrum_ide_eject( libspectrum_ide_channel *chn,
+		       libspectrum_ide_unit unit )
+
+Cause the image attached to `unit' of `chn' to be detached. Note that
+any changes made to the image will be lost unless
+`libspectrum_ide_commit' is called first.
+
+libspectrum_error
+libspectrum_ide_reset( libspectrum_ide_channel *chn )
+
+Reset the IDE channel `chn'.
+
+libspectrum_byte
+libspectrum_ide_read( libspectrum_ide_channel *chn,
+		      libspectrum_ide_register reg )
+
+Returns the current value of register `reg' of the IDE channel
+`chn'. `reg' can take the following values:
+
+LIBSPECTRUM_IDE_REGISTER_DATA
+LIBSPECTRUM_IDE_REGISTER_ERROR_FEATURE
+LIBSPECTRUM_IDE_REGISTER_SECTOR_COUNT
+LIBSPECTRUM_IDE_REGISTER_SECTOR
+LIBSPECTRUM_IDE_REGISTER_CYLINDER_LOW
+LIBSPECTRUM_IDE_REGISTER_CYLINDER_HIGH
+LIBSPECTRUM_IDE_REGISTER_HEAD_DRIVE
+LIBSPECTRUM_IDE_REGISTER_COMMAND_STATUS
+LIBSPECTRUM_IDE_REGISTER_DATA2
+
+The correspondence between these names and the actual IDE registers is
+hopefully obvious; LIBSPECTRUM_IDE_REGISTER_DATA2 refers to the
+secondary data register.
+
+void
+libspectrum_ide_write( libspectrum_ide_channel *chn,
+		       libspectrum_ide_register reg, libspectrum_byte data )
+
+Write `data' to register `reg' of the IDE channgel `chn'.
 
 $Id$
