@@ -415,6 +415,10 @@ libspectrum_tape_block_set_type( libspectrum_tape_block *block,
 
 libspectrum_error libspectrum_tape_block_init( libspectrum_tape_block *block );
 
+libspectrum_error
+libspectrum_tape_block_description( char *buffer, size_t length,
+	                            libspectrum_tape_block *block );
+
 /* Accessor functions */
 LIBSPECTRUM_TAPE_ACCESSORS
 
@@ -462,10 +466,6 @@ libspectrum_error libspectrum_tape_position( int *n, libspectrum_tape *tape );
 /* Select the nth block on the tape */
 libspectrum_error
 libspectrum_tape_nth_block( libspectrum_tape *tape, int n );
-
-libspectrum_error
-libspectrum_tape_block_description( char *buffer, size_t length,
-	                            libspectrum_tape_block *block );
 
 /* Append a block to the current tape */
 libspectrum_error
